@@ -1,3 +1,4 @@
+
 /*
  * The MIT License (MIT)
  *
@@ -48,6 +49,7 @@ import org.broad.igv.ui.IGVMenuBar;
 import org.broad.igv.ui.UIConstants;
 import org.broad.igv.ui.color.ColorUtilities;
 import org.broad.igv.ui.color.PaletteColorTable;
+import org.broad.igv.ui.util.MessageUtils;
 import org.broad.igv.util.HttpUtils;
 
 import java.awt.*;
@@ -73,9 +75,9 @@ public class IGVPreferences {
     Set<String> overrideKeys = new HashSet<>();
 
     // Cached non-string preference values
-    private Map<String, Boolean> booleanCache = new Hashtable();
-    private Map<String, Object> objectCache = new Hashtable();
-    private Map<TrackType, ContinuousColorScale> colorScaleCache = new Hashtable();
+    private Map<String, Boolean> booleanCache = new Hashtable<>();
+    private Map<String, Object> objectCache = new Hashtable<>();
+    private Map<TrackType, ContinuousColorScale> colorScaleCache = new Hashtable<>();
     private PaletteColorTable mutationColorScheme = null;
 
     public IGVPreferences() {
@@ -141,7 +143,7 @@ public class IGVPreferences {
             boolValue = Boolean.valueOf(get(key, value));
             booleanCache.put(key, boolValue);
         }
-        return boolValue.booleanValue();
+        return boolValue;
     }
 
     /**
@@ -159,7 +161,7 @@ public class IGVPreferences {
                 log.warn("No default value for: " + key);
                 return 0;
             }
-            value = new Integer(get(key, defValue));
+            value = Integer.valueOf(get(key, defValue));
             objectCache.put(key, value);
         }
         return value.intValue();
@@ -201,7 +203,7 @@ public class IGVPreferences {
                 log.warn("No default value for: " + key);
                 return 0;
             }
-            value = new Float(get(key, defValue));
+            value = Float.valueOf(get(key, defValue));
             objectCache.put(key, value);
         }
         return value.floatValue();
@@ -235,7 +237,7 @@ public class IGVPreferences {
 
     public boolean getAntiAliasing() {
 
-        if (userPreferences.containsKey(Constants.ENABLE_ANTIALISING) || Globals.IS_LINUX == false) {
+        if (userPreferences.containsKey(Constants.ENABLE_ANTIALISING) || !Globals.IS_LINUX) {
             return getAsBoolean(Constants.ENABLE_ANTIALISING);
         } else {
             // Linux with no explicit setting
@@ -252,9 +254,8 @@ public class IGVPreferences {
     private void updateCaches(String key, String value) {
         key = key.trim();
         if (booleanCache.containsKey(key)) {
-            booleanCache.put(key, new Boolean(value));
+            booleanCache.put(key, Boolean.valueOf(value));
         }
-        colorScaleCache.remove(key);
         objectCache.remove(key);
         mutationColorScheme = null;
     }
@@ -309,7 +310,17 @@ public class IGVPreferences {
         checkForAttributePanelChanges(updatedPrefs);
         checkForCircViewChanges(updatedPrefs);
         checkForGoogleMenuChange(updatedPrefs);
+        checkForRestartChanges(updatedPrefs);
         IGVEventBus.getInstance().post(new PreferencesChangeEvent());
+    }
+
+    private void checkForRestartChanges(Map<String, String> updatedPreferenceMap) {
+        for(String key : RESTART_KEYS) {
+            if(updatedPreferenceMap.containsKey(key)) {
+                MessageUtils.showMessage("Preference changes will take effect after restart.");
+                return;
+            }
+        }
     }
 
     private void checkForGoogleMenuChange(Map<String, String> updatedPreferenceMap) {
@@ -358,14 +369,14 @@ public class IGVPreferences {
             }
 
             if (reloadSAM) {
-                IGVEventBus.getInstance().post(new AlignmentTrackEvent(this, AlignmentTrackEvent.Type.RELOAD));
+                IGVEventBus.getInstance().post(new AlignmentTrackEvent(AlignmentTrackEvent.Type.RELOAD));
             }
             // A reload is harsher than a refresh; only send the weaker request if the stronger one is not sent.
             if (!reloadSAM && refreshSAM) {
-                IGVEventBus.getInstance().post(new AlignmentTrackEvent(this, AlignmentTrackEvent.Type.REFRESH));
+                IGVEventBus.getInstance().post(new AlignmentTrackEvent(AlignmentTrackEvent.Type.REFRESH));
             }
             if (updatedPreferenceMap.containsKey(SAM_ALLELE_THRESHOLD)) {
-                IGVEventBus.getInstance().post(new AlignmentTrackEvent(this, AlignmentTrackEvent.Type.ALLELE_THRESHOLD));
+                IGVEventBus.getInstance().post(new AlignmentTrackEvent(AlignmentTrackEvent.Type.ALLELE_THRESHOLD));
             }
         }
 
@@ -417,7 +428,7 @@ public class IGVPreferences {
         userPreferences.remove(key);
         booleanCache.remove(key);
         objectCache.remove(key);
-        colorScaleCache.remove(key);
+        colorScaleCache.remove(key); //TODO same issue of cache not using String keys
         IGVEventBus.getInstance().post(new PreferencesChangeEvent());
 
     }
